[metadata]
name = desubtraction_metric
version = 0.0.1

[options]
packages =
    desub
    desub_app
install_requires =
    altair
    matplotlib
    numpy
    pandas
    pillow
    pydicom
    scikit-image
    streamlit
include_package_data = True

[options.entry_points]
console_scripts =
    kai3py = kai3py.__main__:main
